--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <ul>
             <li><a href="module-1/thanadabouth-Mod1_3.html">Assignment 1.3</a></li>
             <li><a href="module-2/Thanadabout_Mod2_2.html">Assignment 2.2</a></li>
-            <li><a href="module-3/">Assignment 3.3</a></li>
+            <li><a href="module-3/lab3.2/">Assignment 3.2</a></li>
+            <li><a href="module-3/lab3.3/">Assignment 3.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
