--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <li><a href="module-3/lab3.2/">Assignment 3.2</a></li>
             <li><a href="module-3/lab3.3/">Assignment 3.3</a></li>
             <li><a href="module-4/Thanadabouth_Mod4_2.html">Assignment 4.2</a></li>
-            <li><a href="module-5//">Test</a></li>
+            <li><a href="module-5/README.md">Assignment 5.2</a></li>
+            <li><a href="module-6/6.2/Thanadabouth_Mod6_2.html">Assignment 6.2</a></li>
+            <!-- <li><a href="module-5/README.md">Assignment 5.2</a></li> -->
         </ul>
         <h3>Projects</h3>
         <ul>
