--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <li><a href="module-4/Thanadabouth_Mod4_2.html">Assignment 4.2</a></li>
             <li><a href="module-5/README.md">Assignment 5.2</a></li>
             <li><a href="module-6/6.2/Thanadabouth_Mod6_2.html">Assignment 6.2</a></li>
-            <!-- <li><a href="module-5/README.md">Assignment 5.2</a></li> -->
+            <li><a href="module-8/Thanadabouth_Mod8_2.html">Assignment 8.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href="bioSite/home.html">bioSite Project Home Page</a></li>
+            <li><a href="https://markjackson28.github.io/bioSite/index.html">bioSite Project Home Page</a></li>
         </ul>
         <h4>Important Links</h4>
         <ul>
