updated landing link

--- a/module-8/Thanadabouth_Mod8_2.html
+++ b/module-8/Thanadabouth_Mod8_2.html
@@ -119,7 +119,7 @@
     <footer>
       Copyright &copy; 2024 Thanadabouth
       <a
-        href="../../index.html"
+        href="../index.html"
         style="
           color: #add8e6;
           font-weight: 400;
