--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="module-6/6.2/Thanadabouth_Mod6_2.html">Assignment 6.2</a></li>
             <li><a href="module-8/Thanadabouth_Mod8_2.html">Assignment 8.2</a></li>
             <li><a href="module-9/Thanadabout_Mod9_3.html">Assignment 9.3</a></li>
+            <li><a href="module-10/Thanadabouth_Mod10_3.html">Assignment 10.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
